2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:
	R embed/mozilla/MozillaPrivate.cpp:
	R embed/mozilla/MozillaPrivate.h:
	
	Remove unused files.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/EventContext.cpp:
	
	Don't start search on <embed> and <object> elements.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:
	
	Don't leak the UI language.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:
	
	Add more mime types.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany.schemas.in:
	
	Document the print_frames key.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp:
	
	Decrease maximum progress update to 0.5s

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* lib/Makefile.am:
	
	Fix the build.

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-shell.c: (ephy_embed_shell_set_page_setup),
	(ephy_embed_shell_set_print_settings):
	
	Fix the build.

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:
	
	Remove accel for ViewToolbar. Bug #328783.

2006-08-05  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-shell.c: (ephy_embed_shell_set_page_setup),
	(ephy_embed_shell_get_page_setup),
	(ephy_embed_shell_set_print_settings),
	(ephy_embed_shell_get_print_settings):
	A lib/ephy-print-utils.c:
	A lib/ephy-print-utils.h:
	* lib/ephy-string.c: (ephy_string_flags_from_string),
	(ephy_string_flags_to_string), (ephy_string_enum_from_string),
	(ephy_string_enum_to_string):
	* lib/ephy-string.h:

	Persist print settings and page setup.

2006-07-26  Luca Ferretti  <elle.uca@libero.it>

	* lib/ephy-stock-icons.c:
	* lib/ephy-stock-icons.h:
	* src/ephy-window.c:

	Define STOCK_NEW_WINDOW with named icon "window-new" and use it
	in File -> New Window. Use "tab-new", "bookmark-new" and 