@@ -1,5 +1,11 @@
 2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-toolbar-editor.c:(ephy_toolbar_editor_response):
+	
+	Make sure to destroy the dialogue in all cases.
+
+2006-08-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/mozilla-embed-single.cpp:
 	R embed/mozilla/MozillaPrivate.cpp:
 	R embed/mozilla/MozillaPrivate.h:
